# dgx_timeseries_lab

./: .gitignore  README.md  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml
configs/: README.md  config.yaml
configs/dataset/: README.md  layered_synth.yaml  msl.yaml  multimodal_synth.yaml  parquet.yaml  smap.yaml  trivial_synth.yaml
configs/dataset/cached/: README.md  leo_eps_24h.yaml  leo_eps_corpus.yaml  leo_eps_full_24h.yaml  leo_eps_v1.yaml  leo_eps_v2.yaml  (+5 more)
configs/experiment/: README.md  dgx_pretrain_corpus.yaml  dgx_showcase.yaml  dgx_showcase_multimodal.yaml  phase0_smoke.yaml  phase10_multimodal.yaml  phase1_layered.yaml  phase2_bakeoff.yaml  phase2_smoke.yaml  phase3_bakeoff.yaml  phase4_moe.yaml  phase4_pinn.yaml  phase4_scale.yaml  phase6_multitask.yaml  phase8_cyber.yaml  phase9_pinn_bakeoff.yaml  quickstart_viz.yaml  rtx3080_bakeoff.yaml  tsfm_smoke.yaml
configs/llm/: README.md  anthropic.yaml  llama_cpp_mistral7b_q4.yaml  ollama_granite_8b.yaml  ollama_llama8b.yaml  ollama_phi4.yaml  vllm_granite_34b_code.yaml  vllm_granite_8b.yaml  vllm_granite_8b_code.yaml  vllm_llama70b.yaml  vllm_mistral_8x22b.yaml  vllm_phi4.yaml
configs/model/: README.md  adcs_pinn.yaml  anomaly_transformer.yaml  battery_pinn_patchtst.yaml  chronos_lora.yaml  chronos_zero.yaml  dcdetector.yaml  moirai_lora.yaml  moirai_zero.yaml  moment_zero.yaml  operator_fingerprint.yaml  orbital_pinn_patchtst.yaml  patchtst_mae.yaml  rolling_mean.yaml  sat_multimodal_large.yaml  sat_multimodal_medium.yaml  sat_multimodal_small.yaml  sat_tsfm_large.yaml  sat_tsfm_medium.yaml  sat_tsfm_multitask.yaml  sat_tsfm_small.yaml  sat_tsfm_tiny.yaml  sat_tsfm_xlarge.yaml  sequence_transformer.yaml  subsystem_moe.yaml  thermal_pinn_patchtst.yaml  thermal_pinn_torch.yaml  time_moe_lora.yaml  time_moe_zero.yaml  timesfm_lora.yaml  timesfm_zero.yaml  ttm_lora.yaml  ttm_zero.yaml
configs/sae/: README.md  topk_sae_medium.yaml  topk_sae_small.yaml
configs/trainer/: README.md  a5000.yaml  a5000_x8.yaml  cpu.yaml  fsdp_8xh200.yaml  h200.yaml  h200_fsdp_8x.yaml  rtx3080.yaml  rtx3080_x2.yaml  single_cpu.yaml  single_h200.yaml
docs/: README.md  adding_a_dataset.md  adding_a_model.md  air_gapped_setup.md  architecture.md  experiments_cookbook.md  forecasting_rul_bakeoff.md  foundation_model_provisioning.md  foundation_model_roadmap.md  intern_onboarding.md  lift_to_mlops.md  llm_ops_copilot.md  ops_sat_provisioning.md  pretraining_corpus_roadmap.md  serving_deployment.md
docs/deployment/: README.md  a5000_server.md  cpu_only.md  dgx_h200.md  hardware_compatibility_matrix.md  rtx3080_workstation.md
docs/phase_plans/: README.md  phases_6_through_11.md
experiments/: README.md
scripts/: README.md  build_capability_cliff.py  build_corpus.ps1  build_corpus.sh  build_dataset.ps1  build_dataset.sh  check_gpu.py  convert_ops_sat_to_parquet.py  dgx_showcase.sh  dgx_showcase_copilot_qna.py  download_datasets.py  download_local_llm_weights.sh  download_ops_sat.py  install_cuda_torch.ps1  install_cuda_torch.sh  launch_a5000.sh  launch_cpu_smoke.ps1  launch_dgx_h200.sh  launch_rtx3080.ps1  profile_throughput.py  quickstart.ps1  quickstart.sh  register_foundation_models.py  setup_dev_windows.ps1  setup_dgx.sh  setup_mlflow_registry.sh  setup_ollama_server.sh  setup_vllm_server.sh
(+10 files in other folders)
